# forbidden_island_simulation

./: 1.job  10.job  11.job  12.job  13.job  14.job  15.job  16.job  17.job  18.job  19.job  2.job  20.job  21.job  22.job  23.job  24.job  25.job  26.job  27.job  28.job  29.job  3.job  30.job  31.job  32.job  4.job  5.job  6.job  7.job  8.job  9.job  Cargo.toml  job_generator.py  run_jobs.bash
logs/: get_results.py
src/: main.rs
src/decks/: mod.rs
src/structs/: mod.rs
src/structs/board/: mod.rs
src/structs/cards/: adventurer.rs  flood.rs  island.rs  mod.rs  treasure.rs
src/structs/game/: mod.rs  moves.rs
