[package]
name = "forbidden_island_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
thousands = "0.2.0"

[profile.release]
debug = true